// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumb Breadcrumb baseVue demo works fine 1`] = `
<div
  class="t-breadcrumb"
>
  
  
  <div
    class="t-breadcrumb__item __v_isRef _rawValue _value"
  >
    <a
      class="t-breadcrumb--text-overflow t-link"
      href=""
      target="_self"
    >
      <span
        class="t-breadcrumb__inner"
        style="max-width: 150px;"
      >
        
         页面1 
        
      </span>
    </a>
    <span
      class="t-breadcrumb__separator"
    >
      <svg
        class="t-icon t-icon-chevron-right"
        color="rgba(0,0,0,.3)"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </span>
  </div>
  
  
  <div
    class="t-breadcrumb__item __v_isRef _rawValue _value"
  >
    <span
      class="t-breadcrumb--text-overflow"
    >
      <span
        class="t-breadcrumb__inner"
        style="max-width: 150px;"
      >
        
        页面2面包屑文案超长时悬浮显示文案全部信息
        
      </span>
    </span>
    <span
      class="t-breadcrumb__separator"
    >
      <svg
        class="t-icon t-icon-chevron-right"
        color="rgba(0,0,0,.3)"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </span>
  </div>
  
  
  <div
    class="t-breadcrumb__item __v_isRef _rawValue _value"
  >
    <span
      class="t-breadcrumb--text-overflow"
    >
      <span
        class="t-breadcrumb__inner"
        style="max-width: 160px;"
      >
        
         面包屑中文案过长时可缩略显示，鼠标hover时显示全部 
        
      </span>
    </span>
    <span
      class="t-breadcrumb__separator"
    >
      <svg
        class="t-icon t-icon-chevron-right"
        color="rgba(0,0,0,.3)"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </span>
  </div>
  
  
</div>
`;

exports[`Breadcrumb Breadcrumb customVue demo works fine 1`] = `
<div
  class="t-breadcrumb"
>
  
  
  <div
    class="t-breadcrumb__item __v_isRef _rawValue _value"
  >
    <span
      class="t-breadcrumb--text-overflow"
    >
      <span
        class="t-breadcrumb__inner"
        style="max-width: 120px;"
      >
        
        页面1
        
      </span>
    </span>
    <span
      class="t-breadcrumb__separator"
    >
      
       &gt; 
      
    </span>
  </div>
  
  
  <div
    class="t-breadcrumb__item __v_isRef _rawValue _value"
  >
    <span
      class="t-breadcrumb--text-overflow"
    >
      <span
        class="t-breadcrumb__inner"
        style="max-width: 120px;"
      >
        
        页面2
        
      </span>
    </span>
    <span
      class="t-breadcrumb__separator"
    >
      
       &gt; 
      
    </span>
  </div>
  
  
  <div
    class="t-breadcrumb__item __v_isRef _rawValue _value"
  >
    <span
      class="t-breadcrumb--text-overflow"
    >
      <span
        class="t-breadcrumb__inner"
        style="max-width: 120px;"
      >
        
        页面3
        
      </span>
    </span>
    <span
      class="t-breadcrumb__separator"
    >
      
       &gt; 
      
    </span>
  </div>
  
  
</div>
`;

exports[`Breadcrumb Breadcrumb dropdownVue demo works fine 1`] = `
<div
  class="t-breadcrumb"
>
  
  
  <div
    class="t-breadcrumb__item __v_isRef _rawValue _value"
  >
    <span
      class="t-breadcrumb--text-overflow"
    >
      <span
        class="t-breadcrumb__inner"
        style="max-width: 120px;"
      >
        
        页面1
        
      </span>
    </span>
    <span
      class="t-breadcrumb__separator"
    >
      /
    </span>
  </div>
  
  
  <div
    class="t-breadcrumb__item __v_isRef _rawValue _value"
  >
    <span
      class="t-breadcrumb--text-overflow"
    >
      <span
        class="t-breadcrumb__inner"
        style="max-width: 120px;"
      >
        
        页面2 
        <svg
          class="t-icon t-icon-chevron-down"
        >
          <use
            href="#t-icon-chevron-down"
          />
        </svg>
        
      </span>
    </span>
    <span
      class="t-breadcrumb__separator"
    >
      /
    </span>
  </div>
  
  
  <div
    class="t-breadcrumb__item __v_isRef _rawValue _value"
  >
    <span
      class="t-breadcrumb--text-overflow"
    >
      <span
        class="t-breadcrumb__inner"
        style="max-width: 120px;"
      >
        
        页面3
        
      </span>
    </span>
    <span
      class="t-breadcrumb__separator"
    >
      /
    </span>
  </div>
  
  
</div>
`;

exports[`Breadcrumb Breadcrumb hrefVue demo works fine 1`] = `
<div>
  <div
    class="t-breadcrumb"
  >
    
    
    <div
      class="t-breadcrumb__item __v_isRef _rawValue _value"
    >
      <a
        class="t-breadcrumb--text-overflow t-link"
        href=""
        target="_self"
      >
        <span
          class="t-breadcrumb__inner"
          style="max-width: 120px;"
        >
          
           首页 
          
        </span>
      </a>
      <span
        class="t-breadcrumb__separator"
      >
        <svg
          class="t-icon t-icon-chevron-right"
          color="rgba(0,0,0,.3)"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </span>
    </div>
    
    
    <div
      class="t-breadcrumb__item __v_isRef _rawValue _value"
    >
      <a
        class="t-breadcrumb--text-overflow t-link"
        href=""
        target="_self"
      >
        <span
          class="t-breadcrumb__inner"
          style="max-width: 120px;"
        >
          
           页面1(覆盖路由) 
          
        </span>
      </a>
      <span
        class="t-breadcrumb__separator"
      >
        <svg
          class="t-icon t-icon-chevron-right"
          color="rgba(0,0,0,.3)"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </span>
    </div>
    
    
    <div
      class="t-breadcrumb__item __v_isRef _rawValue _value"
    >
      <a
        class="t-breadcrumb--text-overflow t-link"
        href="https://www.tencent.com"
        target="_blank"
      >
        <span
          class="t-breadcrumb__inner"
          style="max-width: 120px;"
        >
          
           页面2 
          
        </span>
      </a>
      <span
        class="t-breadcrumb__separator"
      >
        <svg
          class="t-icon t-icon-chevron-right"
          color="rgba(0,0,0,.3)"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </span>
    </div>
    
    
    <div
      class="t-breadcrumb__item __v_isRef _rawValue _value"
    >
      <span
        class="t-breadcrumb--text-overflow t-is-disabled"
      >
        <span
          class="t-breadcrumb__inner"
          style="max-width: 120px;"
        >
          
           页面3(disabled) 
          
        </span>
      </span>
      <span
        class="t-breadcrumb__separator"
      >
        <svg
          class="t-icon t-icon-chevron-right"
          color="rgba(0,0,0,.3)"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </span>
    </div>
    
    
    <div
      class="t-breadcrumb__item __v_isRef _rawValue _value"
    >
      <span
        class="t-breadcrumb--text-overflow"
      >
        <span
          class="t-breadcrumb__inner"
          style="max-width: 120px;"
        >
          
           页面4自定义点击 
          
        </span>
      </span>
      <span
        class="t-breadcrumb__separator"
      >
        <svg
          class="t-icon t-icon-chevron-right"
          color="rgba(0,0,0,.3)"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </span>
    </div>
    
    
  </div>
  <div
    style="margin-top: 20px;"
  >
    点击计数器：0
  </div>
</div>
`;

exports[`Breadcrumb Breadcrumb iconVue demo works fine 1`] = `
<div
  class="t-breadcrumb"
>
  
  
  <div
    class="t-breadcrumb__item __v_isRef _rawValue _value"
  >
    <span
      class="t-breadcrumb--text-overflow"
    >
      <span
        class="t-breadcrumb__inner"
        style="max-width: 120px;"
      >
        
        <svg
          class="t-icon t-icon-books"
        >
          <use
            href="#t-icon-books"
          />
        </svg>
        页面1
        
      </span>
    </span>
    <span
      class="t-breadcrumb__separator"
    >
      <svg
        class="t-icon t-icon-chevron-right"
        color="rgba(0,0,0,.3)"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </span>
  </div>
  
  
  <div
    class="t-breadcrumb__item __v_isRef _rawValue _value"
  >
    <span
      class="t-breadcrumb--text-overflow"
    >
      <span
        class="t-breadcrumb__inner"
        style="max-width: 120px;"
      >
        
        <svg
          class="t-icon t-icon-books"
        >
          <use
            href="#t-icon-books"
          />
        </svg>
        页面2
        
      </span>
    </span>
    <span
      class="t-breadcrumb__separator"
    >
      <svg
        class="t-icon t-icon-chevron-right"
        color="rgba(0,0,0,.3)"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </span>
  </div>
  
  
  <div
    class="t-breadcrumb__item __v_isRef _rawValue _value"
  >
    <span
      class="t-breadcrumb--text-overflow"
    >
      <span
        class="t-breadcrumb__inner"
        style="max-width: 120px;"
      >
        
        <svg
          class="t-icon t-icon-books"
        >
          <use
            href="#t-icon-books"
          />
        </svg>
        页面3
        
      </span>
    </span>
    <span
      class="t-breadcrumb__separator"
    >
      <svg
        class="t-icon t-icon-chevron-right"
        color="rgba(0,0,0,.3)"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </span>
  </div>
  
  
</div>
`;

exports[`Breadcrumb Breadcrumb optionsVue demo works fine 1`] = `
<div
  class="t-breadcrumb"
>
  
  
  <div
    class="t-breadcrumb__item __v_isRef _rawValue _value"
  >
    <span
      class="t-breadcrumb--text-overflow"
    >
      <span
        class="t-breadcrumb__inner"
        style="max-width: 120px;"
      >
        
        页面1
        
      </span>
    </span>
    <span
      class="t-breadcrumb__separator"
    >
      <svg
        class="t-icon t-icon-chevron-right"
        color="rgba(0,0,0,.3)"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </span>
  </div>
  
  
  <div
    class="t-breadcrumb__item __v_isRef _rawValue _value"
  >
    <span
      class="t-breadcrumb--text-overflow"
    >
      <span
        class="t-breadcrumb__inner"
        style="max-width: 120px;"
      >
        
        页面2
        
      </span>
    </span>
    <span
      class="t-breadcrumb__separator"
    >
      <svg
        class="t-icon t-icon-chevron-right"
        color="rgba(0,0,0,.3)"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </span>
  </div>
  
  
  <div
    class="t-breadcrumb__item __v_isRef _rawValue _value"
  >
    <a
      class="t-breadcrumb--text-overflow t-link"
      href="https://www.tencent.com"
      target="_self"
    >
      <span
        class="t-breadcrumb__inner"
        style="max-width: 120px;"
      >
        
        页面3
        
      </span>
    </a>
    <span
      class="t-breadcrumb__separator"
    >
      <svg
        class="t-icon t-icon-chevron-right"
        color="rgba(0,0,0,.3)"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </span>
  </div>
  
  
</div>
`;

exports[`Breadcrumb Breadcrumb toVue demo works fine 1`] = `
<div
  class="t-breadcrumb"
>
  
  
  <div
    class="t-breadcrumb__item __v_isRef _rawValue _value"
  >
    <a
      class="t-breadcrumb--text-overflow t-link"
      href=""
      target="_self"
    >
      <span
        class="t-breadcrumb__inner"
        style="max-width: 120px;"
      >
        
         首页 
        
      </span>
    </a>
    <span
      class="t-breadcrumb__separator"
    >
      <svg
        class="t-icon t-icon-chevron-right"
        color="rgba(0,0,0,.3)"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </span>
  </div>
  
  
  <div
    class="t-breadcrumb__item __v_isRef _rawValue _value"
  >
    <span
      class="t-breadcrumb--text-overflow"
    >
      <span
        class="t-breadcrumb__inner"
        style="max-width: 120px;"
      >
        
        页面1
        
      </span>
    </span>
    <span
      class="t-breadcrumb__separator"
    >
      <svg
        class="t-icon t-icon-chevron-right"
        color="rgba(0,0,0,.3)"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </span>
  </div>
  
  
</div>
`;
